# example

./: .gitignore  CMakeLists.txt
demo/: trivial.R
exdebug/: DESCRIPTION  NAMESPACE
exdebug/R/: RcppExports.R
exdebug/inst/include/: exdebug.h  exdebug_RcppExports.h
exdebug/man/: exdebug-package.Rd
exdebug/src/: Makevars  RcppExports.cpp  ex-debug-wrap.cpp
include/: ex-debug.hpp
src/: ex-debug.cpp
